<resources>
    <string name="app_name">Rent Residence</string>
    <string name="hint_Email">"Type your e-mail "</string>
    <string name="tv_Password">Password*</string>
    <string name="hint_Password">Type your password</string>
    <string name="tv_Password2">Retype your password</string>
    <string name="hint_Password2">Retype your password</string>
    <string name="bt_Add">Add</string>
    <string name="bt_Cancel">Cancel</string>
    <string name="et_Password">Type your password</string>
    <string name="et_Password2">Retype your password</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rent A Residence</string>
    <string name="nav_header_subtitle">Developer Jefferson Borges</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_cadastro">Add record</string>
    <string name="menu_listagem">Listing</string>
    <string name="menu_mapa">Where find us</string>
    <string name="menu_sobre">About</string>]
    <string name="menu_share">Share</string>
    <string name="menu_sair">Logout</string>
    <string name="title_activity_principal2">Add</string>
    <string name="tv_user_logout">User successfully logged out</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyC8YvM_sV963TGc7nKQ-fu_1_-s9kz_f4Y</string>
    <string name="title_activity_maps">Map</string>
    <string name="preencher_campos">Error - Fill in all fields</string>
    <string name="conexao_internet">Error - Check internet connection</string>
    <string name="senhas_diferentes">Error - Different passwords</string>
    <string name="cadastro_sucesso">Registration successfully Complete</string>
    <string name="email_recuperar_senha">Enter your email in order to recover your password</string>
    <string name="email_redefinir_senha">We send a message to your email with a link for you to reset your password</string>
    <string name="autenticacao">Authentication</string>
    <string name="autenticando_usuario">Authenticating user, please wait...</string>
    <string name="insira_campos_obrigatorios">Enter the required fields</string>
    <string name="usuario">"User "</string>
    <string name="esta_logado">" is logged in"</string>
    <string name="listagem_imoveis">Property Listing</string>
    <string name="endereco">"Address: "</string>
    <string name="bairro">"Neighborhood: "</string>
    <string name="cidade_uf">"City/State: "</string>
    <string name="imobiliaria">"Real Estate: "</string>
    <string name="telefone_imobiliaria">"Real Estate Telephone: "</string>
    <string name="inserir_imovel">Enter Property</string>
    <string name="alterar_dados">Change data</string>
    <string name="gravado_sucesso">Recorded successfully!</string>
    <string name="operacao_nao_realizada">Operation not performed!</string>
    <string name="confirmacao_exclusao">Confirmation of Exclusion</string>
    <string name="deseja_excluir_registro">Do you want to delete this record?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="excluido_sucesso">Deleted successfully!</string>
    <string name="compartilhado_rent_residence">Data shared by Rent Residence</string>
    <string name="whatsapp_nao_instalado">WhatsApp not installed!</string>
    <string name="senha_maior_6_caracteres">Enter a password that is at least 6 characters long</string>
    <string name="email_invalido">Invalid email</string>
    <string name="sem_conexao_firebase">No connection to Firebase</string>
    <string name="senha_invalida">Invalid password!</string>
    <string name="email_nao_cadastrado">This email is not registered!</string>
    <string name="email_ja_cadastrado">E-mail already exists registered!</string>
    <string name="recuperar_senha">Recover Password</string>
    <string name="linguagem_desenvolvimento">Development in: JAVA</string>
    <string name="versao">"Version: "</string>
    <string name="empresa_produto">Company: FIAP</string>
    <string name="numero">Number:</string>
    <string name="cidade">City</string>
    <string name="estado">Estate</string>
    <string name="telefone">Telephone</string>
    <string name="fechar">Close</string>
    <string name="excluir">Delete</string>
    <string name="salvar">Save</string>
    <string name="endereco_obrigatorio">Address is required field!</string>
    <string name="campo_numero_obrigario">Number field is required!</string>
    <string name="campo_telefone_obrigatorio">Phone field is required</string>
</resources>
