<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="E-mail" />

    <EditText
        android:id="@+id/editText_EmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Password" />

    <EditText
        android:id="@+id/editText_SenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Password2" />

    <EditText
        android:id="@+id/editText_SenhaRepetirCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Password2"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_CadastrarUsuario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bt_Add"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_Cancelar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_Cancel"
        android:textAllCaps="false" />

</LinearLayout>