<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_listagem"
            android:title="@string/menu_listagem" />
        <item
            android:id="@+id/nav_cadastro"
            android:icon="@drawable/ic_menu_cadastro"
            android:title="@string/menu_cadastro" />
        <item
            android:id="@+id/nav_onde_encontrar"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_sobre"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_sair"
            android:title="@string/menu_sair" />
    </group>

</menu>
