<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cadastro"
            android:icon="@drawable/ic_menu_cadastro"
            android:title="@string/menu_cadastro" />
        <item
            android:id="@+id/nav_listagem"
            android:icon="@drawable/ic_menu_listagem"
            android:title="@string/menu_listagem" />
    </group>

    <item android:title="Aplicativo">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_sobre"
                android:title="@string/menu_sobre" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_menu_sair"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
